--- a/style.css
+++ b/style.css
@@ -175,6 +175,9 @@ body{
     align-self: center;
     margin-left:8px;
 }
+
+
+/* Section About */
 .aboutme{
     background:var(--light-Dark);
     position:relative;
@@ -239,4 +242,93 @@ body{
     margin:0 auto;
     font-size:21px;
     padding-bottom:80px;
+}
+
+
+
+
+/* Section Specialization */
+.my-specializations{
+    background-color: var(--Dark-main);
+    padding:128px 90px;
+}
+.specs-flex-box1-2{
+    display:flex;
+    justify-content: space-around;
+}
+.spec-box.spec-box-flex{
+    width:600px;
+    height:300px;
+}
+.spec-box{
+    border:1px solid var(--white25);
+    position:relative;
+    width:600px;
+    height:300px;
+    margin:40px 0px;
+}
+.spec-box:nth-child(3){
+    width:100%;
+    height:200px;
+}
+.spec-box:nth-child(4){
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:80px;;
+}
+.spec-box h3{
+    color:var(--secound);
+    font-size:40px;
+    font-weight:bold;
+    text-align: center;
+    margin:16px 64px 0px;
+}
+.spec-box p{
+    color:#fff;
+    font-size:28px;
+    text-align: center;
+    margin:48px 32px 0px;
+    line-height:45px;
+}
+.spec-box img{
+    position:absolute;
+    top:16px;
+    left:16px;
+    width: 100px;
+    height:100px;
+}
+
+.spec-tools{
+    padding:128px 0px;
+    border:1px solid red;
+}
+.tools-content{
+    
+}
+.tools-type-flex{
+    width:600px;
+    height:100px;
+    background-color: var(--light-Dark);
+    display:flex;
+    flex-direction: row;
+    position:relative;
+    margin:0 auto;
+    justify-content: space-around;
+    z-index:1!important;
+}
+.tools-content div{
+    width:40%;
+    border:1px solid red;
+    z-index:5!important;
+}
+.active-tool{
+    position:absolute;
+    top:0;
+    left:0;
+    width:300px;
+    height:300px;
+    background-color: yellow;
+    margin-top:-95px;
+    margin-left:-95px;
+    z-index:3 !important;
 }
