--- a/style.css
+++ b/style.css
@@ -313,32 +313,73 @@ body{
     margin:0 auto;
     justify-content: space-around;
     z-index:1 !important;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden !important;
 }
 .tools-content div{
     width:600px;
-    border:1px solid red;
     z-index:5 !important;
 }
 .tools-content-flex div{
     width:40%;
-    border:1px solid red;
 }
 .tools-content div p{
-    color:#fff;
     z-index:7 !important;
+    text-align: center;
+    font-size:21px;
+    font-weight:bold;
 }
 .active-tool{
     position:absolute;
     top:0;
     left:0;
-    width:300px;
-    height:300px;
-    background-color: yellow;
-    margin-top:-150px;
-    margin-left:-150px;
+    width:300px !important;
+    height:300px !important;
+    background:linear-gradient(to left,  var(--secound), var(--secound));
+    margin-top:-100px;
+    margin-left:-50px;
+    transform:rotate(45deg) !important;
     z-index:3 !important;
 }
+.programming-tools p{
+    color:black;
+    font-weight:bold;
+}
+.designing-tools p{
+    color:white;
+    font-weight:bold;
+}
 
+.my-tools-main{
+    width:600px;
+    margin:0 auto;
+    position:relative;
+    border:1px solid red;
+}
+.my-tools-programming{
+    border:1px solid blue;
+    position:absolute;
+    top:0;
+    left:0;
+}
+.tool{
+    display:inline-block;
+    width:100px !important;
+    border:1px solid red;
+}
+.tool img{
+    width:75px;
+    height:75px;
+    border:1px solid red;
+    margin:0 auto;
+}
+.tool p{
+    font-size:21px;
+    color:white;
+    font-weight:400 !important;
+}
 
 
 .short-contact{
