--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body{
     width:100%;
     height:auto;
     overflow: overlay;
-    background-size: 200vw;
+    position:relative;
 }
 .desk-nav{
     width:100%;
@@ -481,7 +481,6 @@ body{
 
 .realization{
     padding-top:80px;
-    height:1000px;
     border:1px solid yellow;
     background: var(--light-Dark);
 }
@@ -498,7 +497,9 @@ body{
     height:280px;
     position:relative;
     background-image: url(./img/);
-
+}
+.project:nth-child(3){
+    margin-top:90px;
 }
 .project-info{
     position:absolute;
@@ -513,4 +514,21 @@ body{
 .project-info:hover{
     background: hsla(0,0%,0%,0.85);
     border:1px solid var(--secound);
+}
+.more-realization{
+    border:1px solid var(--main);
+    margin:0 auto;
+    width:fit-content;
+    height:fit-content;
+}
+.more-realization a{
+    padding:16px 32px !important;
+
+}
+.more-realization-content{
+    display:flex;
+
+}
+.more-realization-content{
+    color:var(--white75);
 }
