--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@
     --white5:hsla(0,0%,100%,0.05);
 }
 
+body{
+    background: var(--light-Dark);
+}
 .desk-nav{
     width:100%;
     padding:24px 0px;
@@ -486,45 +489,43 @@
     height:100%;
     background: hsla(0,0%,0%,0);
     border:1px solid var(--white25);
-    transition:all .3s ease-in-out;
+    transition:all .1s ease-in-out;
 }
 
 .project-info p{
-    opacity:0;
     transform:all .3s ease-in-out;
-    color:var(--main);
+    color:hsla(0,0%,100%,0);
     font-size:42px;
     text-align:center;
     margin-top:50px;
     position:relative;
+    transition: all .3s ease-in-out;
 }
 .project-info p:nth-child(2){
-    color:white;
+    color:hsla(0,0%,100%,0);
     font-size:21px;
     text-align:center;
-    margin:8px auto 32px;
+    margin:16px auto 64px;
 }
 .project-info a{
     display:flex;
     margin:0 auto;
     width:fit-content;
-    opacity:0;
-    transform:all .3s ease-in-out;
 }
 
 .project-info a p{
-    color:var(--white25);
-    font-size:22px;
+    color:hsla(0,0%,75%,0);
+    font-size:18px;
     margin:0 8px 0px 0px;
     text-align:center;
-    transition: color .3s ease-in-out;
-    opacity:0;
+    transition: all .3s ease-in-out;
+    font-weight:100;
 }
 .project-info a i{
-    color:var(--white25);
-    font-size:22px;
-    transition: color .3s ease-in-out;
-    opacity:0 !important;
+    color:hsla(0,0%,75%,0);
+    padding-top:3px;
+    font-size:18px;
+    transition: all .3s ease-in-out;
 }
 
 .project-info:hover{
@@ -532,15 +533,26 @@
     border:1px solid var(--secound);
     box-shadow: 0px 0px 5px var(--main);
 }
-.project-info:hover >p,a {
-    opacity:1 !important;
+.project-info:hover >p{
+    color:var(--main);
 }
-.project-info:hover > a p, i{
-    opacity:1 !important;
+.project-info:hover >p:nth-child(2){
+    color:#fff;
 }
+.project-info:hover > a p,
 .project-info:hover > a i{
-    opacity:1 !important;
+    color:hsla(0,0%,50%,1);
 }
+.project-info a:hover>p{
+    color:var(--white75);
+}
+.project-info a:hover>i{
+    color:var(--white75);
+    transform: translateX(8px) !important;
+}
+
+
+
 .more-realization{
     border:1px solid var(--main);
     margin:0 auto;
@@ -558,5 +570,115 @@
 
 }
 .more-realization-content{
+    color:var(--white50);
+    transition:all .3s ease-in-out;
+}
+
+.more-realization-content .icon{
+    position:relative;
+    width:25px;
+    height:25px;
+    border-radius:100%;
+    border:1px solid var(--white50);
+    margin-left:8px;
+    transition:all .3s ease-in-out;
+}
+.more-realization-content .icon i{
+    font-size:20px;
+    position: absolute;;
+    top: 50%;
+    left: 50%;
+    margin-left:-10px;
+    margin-top:-10px;
+    transition: all .3s ease-in-out;
+}
+.more-realization-content:hover >.icon i{
+    transform:translateX(15px) !important;
+    color:#fff;
+}
+.more-realization-content:hover{
+    color:#fff;
+    box-shadow:0px 0px 3px var(--main);
+}
+.more-realization-content:hover>.icon{
+    border:1px solid #fff;
+}
+
+
+
+/* faq section */
+
+.faq-section{
+    margin:0px 90px;
+    padding-bottom:400px;
+}
+.faq-section .tittle-of-section{
+    text-align:left;
+    width:50%;
+    margin-bottom:64px;
+}
+.faq-content{
+    border:1px solid yellow;
+    display:flex;
+}
+.faq-about{
+    width:30%;
+    position:relative;
+}
+.faq-about-content{
+    position:relative;
+    margin-bottom:64px;
+}
+.faq-about-content p{
+    font-size:30px;
+    color:#fff;
+}
+.faq-about a{
+    border:1px solid var(--secound);
+    padding:16px 32px;
+    border-radius:16px;
+    color:var(--secound);
+    font-size:21px;
+}
+.faq-qa{
+    width: 60%;
+    border:1px solid purple;
+}
+.qa{
+    border-bottom:2px solid var(--white75);
+    padding-bottom:8px;
+}
+.qa-question{
+    display:flex;
+    border:1px solid brown;
+
+}
+.qa-title{
     color:var(--white75);
+    font-size:30px;
+    width:calc(100% - 25px);
+}
+.qa-icon{
+    position:relative;
+    float:right;
+    width:26px;
+    height:26px;
+}
+.qa-icon-plus{
+    height:26px;
+    width:2px;
+    background:var(--white75);
+    position:absolute;
+    left:50%;
+    margin-left:-1px;
+    top:50%;
+    margin-top:-13px;
+}
+.qa-icon-minus{
+    width:26px;
+    height:2px;
+    background: var(--white75);
+    position:absolute;
+    top:50%;
+    margin-top:-1px;
 }
