--- a/style.css
+++ b/style.css
@@ -22,12 +22,22 @@ body{
 }
 
 
-.desk-nav{
+.desk-nav.active-nav{
     width:100%;
     padding:24px 0px;
     position:fixed;
     border-bottom:1px solid white;
     z-index:10;
+    background:hsla(0,0%,0%,0);
+}
+.desk-nav{
+    width:100%;
+    padding:16px 0px;
+    position:fixed;
+    border-bottom:1px solid var(--white25);
+    z-index:12;
+    background:var(--light-Dark);
+    transition:all .3s ease-in-out;
 }
 .desk-nav-mar{
     display:flex;
@@ -37,10 +47,17 @@ body{
 .desk-nav-logo{
     z-index:99;
 }
-.desk-nav-logo img{
+.desk-nav.active-nav .desk-nav-logo img{
     width:45px;
     height:45px;
+    transition:all .3s ease-in-out;
 }
+.desk-nav .desk-nav-logo img{
+    width:35px;
+    height:35px;
+    transition:all .3s ease-in-out;
+}
+
 .desk-nav-anchors-flex{
     display:flex;
     width:100%;
@@ -52,23 +69,37 @@ body{
     right:0;
     display:flex;
     align-self: center;
-    height:48px;
+    transition:all .3s ease-in-out;
+
 }
 .nav-anchor{
-    margin:0px 32px;
+    margin:0px 16px;
     position:relative;
     align-self: center;
     display:flex;
     flex-direction: column;
     z-index:99;
+    transition:all .3s ease-in-out;
 }
-.nav-anchor a{
+.desk-nav.active-nav .nav-anchor{
+    margin:0 32px;
+}
+.desk-nav.active-nav .nav-anchor a{
     color:white;
     font-size:23px;
     font-weight:600;
-    transition:color .3s ease-in-out;
+    transition:all .3s ease-in-out;
 }
-.nav-anchor a:hover{
+.desk-nav .nav-anchor a{
+    color:white;
+    font-size:20px;
+    font-weight:100;
+    transition:all .3s ease-in-out;
+}
+.desk-nav.active-nav .nav-anchor a:hover{
+    color:var(--main);
+}
+.desk-nav .nav-anchor a:hover{
     color:var(--main);
 }
 .active-underscore{
@@ -77,7 +108,11 @@ body{
     background:var(--main);
     margin-top:4px;
 }
-.nav-anchor.active a{
+.desk-nav.active-nav .nav-anchor.active a{
+    color:var(--main);
+    margin-top:8px;
+}
+.desk-nav .nav-anchor.active a{
     color:var(--main);
     margin-top:8px;
 }
@@ -574,6 +609,7 @@ body{
     width:fit-content;
     height:fit-content;
     margin-bottom:200px;
+    border-radius: 8px;
 }
 .more-realization a{
     padding:16px 32px !important;
@@ -613,6 +649,8 @@ body{
 }
 .more-realization-content:hover{
     color:#fff;
+}
+.more-realization:hover{
     box-shadow:0px 0px 10px var(--main);
 }
 .more-realization-content:hover>.icon{
@@ -625,7 +663,7 @@ body{
 
 .faq-section{
     margin:0px 90px;
-    padding-bottom:400px;
+    padding-bottom:240px;
 }
 .faq-section .tittle-of-section{
     text-align:left;
@@ -650,7 +688,7 @@ body{
 .faq-about a{
     border:1px solid var(--main);
     padding:16px 32px;
-    border-radius:32px;
+    border-radius:8px;
     color:var(--main);
     font-size:21px;
     transition:all .3s ease-in-out;
@@ -714,7 +752,7 @@ body{
 
 .contact-front-section{
     margin: 0 90px;
-    padding-bottom:300px;
+    padding-bottom:80px;
 }
 .possibility-of-contacts{
     display:flex;
@@ -821,7 +859,13 @@ form{
     border:1px solid var(--secound);
     color:var(--secound);
 }
-
+form label{
+    color:#fff;
+    font-size:13px;
+}
+form label input{
+    margin-right:8px;
+}
 /* Footer */
 footer{
     width:100%;
