--- a/style.css
+++ b/style.css
@@ -381,6 +381,7 @@ body{
     text-align: center;
     font-size:21px;
     font-weight:bold;
+    cursor: pointer;
 }
 .active-tool{
     position:absolute;
@@ -393,6 +394,18 @@ body{
     margin-left:-50px;
     transform:rotate(45deg) !important;
     z-index:3 !important;
+}
+.active-tool.right-tool {
+    position: absolute;
+    top: 0;
+    left: 70%;
+    width: 300px !important;
+    height: 300px !important;
+    background: linear-gradient(to left, var(--main), var(--main));
+    margin-top: -100px;
+    margin-left: -50px;
+    transform: rotate(45deg) !important;
+    z-index: 3 !important;
 }
 .programming-tools p{
     color:black;
@@ -729,6 +742,8 @@ body{
     border-bottom:2px solid var(--white75);
     padding-bottom:8px;
     margin-top:16px;
+    transition:all .3s ease-in-out;
+    cursor: pointer;
 }
 .qa-question{
     display:flex;
@@ -740,6 +755,7 @@ body{
     color:var(--white75);
     font-size:30px;
     width:calc(100% - 25px);
+    transition:color .3s ease-in-out;
 }
 .qa-icon{
     position:relative;
@@ -757,6 +773,7 @@ body{
     margin-left:-1px;
     top:50%;
     margin-top:-13px;
+    transition:all .3s ease-in-out;
 }
 .qa-icon-minus{
     width:26px;
@@ -765,14 +782,37 @@ body{
     position:absolute;
     top:50%;
     margin-top:-1px;
+    transition:all .3s ease-in-out;
 }
 .qa-answer{
-    font-size:18px;
+    font-size:16px;
     font-weight: 100;
-    color:var(--white75);
+    color:white;
     height:0;
     overflow: hidden;
+    margin-top:0px;
+    line-height:25px;
 }
+.qa.qa-Active{
+    border-bottom: 2px solid var(--main);
+}
+.qa.qa-Active .qa-question .qa-title{
+    color:var(--main);
+}
+.qa.qa-Active .qa-answer{
+    height:auto;
+    margin-top:24px;
+    margin-bottom:16px;
+}
+.qa.qa-Active .qa-question .qa-icon .qa-icon-plus{
+    transform:rotate(270deg);
+    background:var(--main);
+}
+.qa.qa-Active .qa-question .qa-icon .qa-icon-minus{
+    background:var(--main);
+}
+
+
 
 /*Contact Section */
 
@@ -829,10 +869,10 @@ body{
     margin-left:8px;
 }
 .type-of-contact a:hover{
-    color:var(--secound)
+    color:var(--main)
 }
 .type-of-contact a:hover~i{
-    color:var(--secound)
+    color:var(--main)
 }
 
 form{
