--- a/style.css
+++ b/style.css
@@ -22,12 +22,30 @@ body{
     max-width:100vw;
 }
 
+body::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  body::-webkit-scrollbar-track {
+    background: hsl(0,0%,15%);
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background: var(--secound);
+    border-radius: 20px;
+    border: 2px solid hsl(0,0%,15%);
+    transition:all .3s ease-in-out;
+  }
+  body::-webkit-scrollbar-thumb:hover {
+    background: var(--main);
+  }
 
-.desk-nav.active-nav{
+
+  .desk-nav.active-nav{
     width:100%;
     padding:24px 0px;
     position:fixed;
-    border-bottom:1px solid white;
+    border-bottom:1px solid hsl(0,0%,55%);
     z-index:10;
     background:hsla(0,0%,0%,0);
 }
@@ -47,6 +65,7 @@ body{
 }
 .desk-nav-logo{
     z-index:99;
+    user-select:none;
 }
 .desk-nav.active-nav .desk-nav-logo img{
     width:45px;
@@ -88,7 +107,7 @@ body{
 .desk-nav.active-nav .nav-anchor a{
     color:white;
     font-size:23px;
-    font-weight:600;
+    font-weight:200;
     transition:all .3s ease-in-out;
 }
 .desk-nav .nav-anchor a{
@@ -355,6 +374,7 @@ body{
     margin-bottom:80px;
 }
 .tools-type-flex{
+    user-select:none;
     width:600px;
     height:100px;
     background-color: var(--light-Dark);
@@ -394,11 +414,12 @@ body{
     margin-left:-50px;
     transform:rotate(45deg) !important;
     z-index:3 !important;
+    transition:all .3s ease-in-out;
 }
 .active-tool.right-tool {
     position: absolute;
     top: 0;
-    left: 70%;
+    left: 65%;
     width: 300px !important;
     height: 300px !important;
     background: linear-gradient(to left, var(--main), var(--main));
@@ -407,29 +428,55 @@ body{
     transform: rotate(45deg) !important;
     z-index: 3 !important;
 }
+.programming-tools, .designing-tools{
+    cursor:pointer;
+}
 .programming-tools p{
-    color:black;
+    color:white;
     font-weight:bold;
+    transition:all .3s ease-in-out;
 }
 .designing-tools p{
     color:white;
     font-weight:bold;
+    transition:all .3s ease-in-out;
+}
+.programming-tools.active-tools p{
+    color:black;
+}
+.designing-tools.active-tools p{
+    color:black;
 }
 
 .my-tools-main{
+    user-select:none;
     width:600px;
     margin:32px auto 0;
     position:relative;
+}
+.my-tools-programming.my-active-tools{
+    position:absolute;
+    top:0;
+    left:0;
+    display:flex;
+    display:inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    transition:opacity .3s ease-in-out;
+    opacity:1;
 }
 .my-tools-programming{
     position:absolute;
     top:0;
     left:0;
     display:flex;
+    display:inline-flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    display:inline-flex;
+    transition:opacity .3s ease-in-out;
+    opacity:0;
 }
 .tool{
     position:relative;
@@ -455,7 +502,11 @@ body{
     display:flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    display:none;
+    opacity:0;
+    transition:opacity .3s ease-in-out;
+}
+.my-tools-designing.my-active-tools{
+    opacity:1;
 }
 
 .square-ornament-absolute{
@@ -934,6 +985,7 @@ form label input{
     margin-right:8px;
 }
 .button-send-form{
+    user-select:none;
     width:100%;
     height:fit-content;
     background:var(--main);
@@ -975,6 +1027,7 @@ footer{
     text-align:center;
 }
 .footer-content img{
+    user-select:none;
     width:45px;
     height:65px;
     margin:0 auto;
@@ -1391,6 +1444,9 @@ footer{
         margin-top: -50px;
         margin-left: -30px;
     }
+    .active-tool.right-tool {
+        left: 75%;
+    }
     .tools-content div p {
         font-size: 18px;
     }
@@ -1591,6 +1647,9 @@ footer{
         margin-top: -50px;
         margin-left: -25px;
     }
+    .active-tool.right-tool {
+        left: 75%;
+    }
     .tools-content div p {
         font-size: 15px;
     }
@@ -1710,6 +1769,9 @@ footer{
         height: 200px !important;
         margin-top: -50px;
         margin-left: -50px;
+    }
+    .active-tool.right-tool {
+        left: 80%;
     }
     .header-content-abs {
         width: 95%;
@@ -1883,6 +1945,9 @@ footer{
         height: 150px !important;
         margin-top: -25px;
         margin-left: -25px;
+    }
+    .active-tool.right-tool {
+        left: 83%;
     }
     .btn-poznajmy-sie-a i {
         font-size: 16px;
